--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,6 @@ body {
   color: #ffc400;
 }
 
-
-
 .joinus_paragraph {
   color: #94a3b8;
   font-family: "Poppins";
@@ -82,6 +80,11 @@ body {
   line-height: 28px;
   color: #ffffff;
   cursor: pointer;
+  transition-duration: 1s;
+}
+
+.signup_google:hover {
+  color: #ffc400;
 }
 
 label {
@@ -104,6 +107,7 @@ input {
   border-radius: 35px;
   color: white;
   margin-bottom: 24px;
+  outline: none;
 }
 
 input:focus {
@@ -169,4 +173,9 @@ color: #64748B;
 
 span {
   color: #2563EB;
+  transition-duration: 1s;
+}
+
+span:hover {
+  opacity: 0.7;
 }
