--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* დასქროლვის დროს უკანა თეთრი ფონი რრომ არ  გამოჩნდეს მაგისთვის */
 body {
   background-color: #0f172a;
@@ -9,8 +16,12 @@ body {
   /* border: 2px solid red; */
   background-color: #0f172a;
   padding: 94px 12% 94px 12%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .div_photo {
@@ -28,8 +39,13 @@ body {
 .registration_box {
   width: 40%;
   /* border: 2px solid green; */
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .joinus_text {
@@ -65,9 +81,15 @@ body {
   background: #1e293b;
   border-radius: 35px;
   padding: 19px 19px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 20px;
   margin-bottom: 49px;
 }
@@ -80,7 +102,9 @@ body {
   line-height: 28px;
   color: #ffffff;
   cursor: pointer;
-  transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+       -o-transition-duration: 1s;
+          transition-duration: 1s;
 }
 
 .signup_google:hover {
@@ -112,6 +136,42 @@ input {
 
 input:focus {
   color: #ffc400;
+}
+
+::-webkit-input-placeholder {
+  color: #94a3b8;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 26px;
+}
+
+::-moz-placeholder {
+  color: #94a3b8;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 26px;
+}
+
+:-ms-input-placeholder {
+  color: #94a3b8;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 26px;
+}
+
+::-ms-input-placeholder {
+  color: #94a3b8;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 26px;
 }
 
 ::placeholder {
@@ -151,7 +211,9 @@ input:focus {
   line-height: 28px;
   letter-spacing: -0.2px;
   cursor: pointer;
-  transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+       -o-transition-duration: 1s;
+          transition-duration: 1s;
   margin-bottom: 20px;
 
 }
@@ -173,7 +235,9 @@ color: #64748B;
 
 span {
   color: #2563EB;
-  transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+       -o-transition-duration: 1s;
+          transition-duration: 1s;
 }
 
 span:hover {
